renamed TypeHelpers.hs to AST/Sing.hs

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -26,37 +26,38 @@ Library
     Default-Language:  Haskell2010
     GHC-Options:       -Wall -fwarn-tabs
 
-    exposed-modules:   Language.Hakaru.Pretty.Maple,
-                       Language.Hakaru.Simplify,
-                       Language.Hakaru.Util.Csv,
-                       Language.Hakaru.Sample,
-                       Language.Hakaru.Parser.AST,
-                       Language.Hakaru.Parser.Parser,
-                       Language.Hakaru.Parser.SymbolResolve,
+    exposed-modules:   Language.Hakaru.Syntax.IClasses,
+                       Language.Hakaru.Syntax.ABT,
+                       Language.Hakaru.Syntax.Variable,
+                       Language.Hakaru.Syntax.Datum,
+                       Language.Hakaru.Syntax.DatumCase,
                        Language.Hakaru.Types.DataKind,
                        Language.Hakaru.Types.Sing,
                        Language.Hakaru.Types.HClasses,
                        Language.Hakaru.Types.Coercion,
-                       Language.Hakaru.Syntax.AST.Eq,
-                       Data.Number.Nat,
-                       Data.Number.Natural,
-                       Language.Hakaru.Syntax.IClasses,
-                       Language.Hakaru.Syntax.Datum,
                        Language.Hakaru.Syntax.AST,
-                       Language.Hakaru.Syntax.ABT,
-                       Language.Hakaru.Syntax.Variable,
+                       Language.Hakaru.Syntax.AST.Sing,
+                       Language.Hakaru.Syntax.AST.Eq,
                        Language.Hakaru.Syntax.TypeCheck,
                        Language.Hakaru.Syntax.TypeOf,
                        Language.Hakaru.Syntax.Prelude,
-                       Language.Hakaru.Syntax.DatumCase,
+                       Language.Hakaru.Parser.AST,
+                       Language.Hakaru.Parser.Parser,
+                       Language.Hakaru.Parser.SymbolResolve,
                        Language.Hakaru.Pretty.Haskell,
                        Language.Hakaru.Pretty.Concrete,
+                       Language.Hakaru.Pretty.Maple,
                        Language.Hakaru.Expect,
                        Language.Hakaru.Observe,
+                       Language.Hakaru.Simplify,
+                       Language.Hakaru.Sample,
                        Language.Hakaru.Evaluation.Types,
                        Language.Hakaru.Evaluation.Lazy,
                        Language.Hakaru.Disintegrate,
-                       Language.Hakaru.Inference
+                       Language.Hakaru.Inference,
+                       Language.Hakaru.Util.Csv,
+                       Data.Number.Nat,
+                       Data.Number.Natural
 
     other-modules:     Language.Hakaru.Util.Extras,
                        Language.Hakaru.Util.Lex,
