Move program transformations into own file

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -48,6 +48,7 @@ Library
                        Language.Hakaru.Pretty.Concrete,
                        Language.Hakaru.Pretty.Maple,
                        Language.Hakaru.Expect,
+                       Language.Hakaru.Normalize,
                        Language.Hakaru.Observe,
                        Language.Hakaru.Simplify,
                        Language.Hakaru.Sample,
