--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -66,7 +66,7 @@ Library
 
     other-modules:     Language.Hakaru.Util.Extras,
                        Language.Hakaru.Util.Lex,
-                       Language.Hakaru.Util.Visual,
+                       -- Language.Hakaru.Util.Visual,
                        System.MapleSSH
 
 -- LH == Language.Hakaru
@@ -102,7 +102,7 @@ Library
                        cassava          >= 0.4  && < 0.5,
                        zlib             >= 0.5  && < 0.7,
                        bytestring       >= 0.10 && < 0.11,
-                       aeson            >= 0.7  && < 0.11,
+                       -- aeson         >= 0.7  && < 0.11,
                        text             >= 0.11 && < 1.3,
                        -- statistics    >= 0.11 && < 0.14,
                        parsec           >= 3.1  && < 3.2,
