--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -92,12 +92,12 @@ library
                        pretty >=1.1 && <1.2,
                        logfloat >=0.12 && <0.14,
                        math-functions >=0.1 && <0.2,
-                       vector >=0.10 && <0.11,
+                       vector >=0.10,
                        indentation >= 0.2.1,
                        cassava >=0.4 && <0.5,
                        zlib >=0.5 && <0.6,
                        bytestring >=0.10 && <0.11,
-                       aeson >=0.7 && <0.9,
+                       aeson >=0.7,
                        text >= 0.11 && <1.3,
 --                       statistics >=0.11 && <0.14,
                        parsec >=3.1 && <3.2,
