--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -96,7 +96,7 @@ Library
                        pretty           >= 1.1  && < 1.2,
                        logfloat         >= 0.13 && < 0.14,
                        math-functions   >= 0.1  && < 0.2,
-                       vector           >= 0.10 && < 0.12,
+                       vector           >= 0.10,
                        indentation      >= 0.2.1,
                        ansi-terminal    >= 0.6,
                        cassava          >= 0.4  && < 0.5,
@@ -148,7 +148,7 @@ Test-Suite system-testsuite
                        QuickCheck       >= 2.6,
                        process          >= 1.1  && < 2.0,
                        mtl              >= 2.1,
-                       vector           >= 0.10 && < 0.12,
+                       vector           >= 0.10,
                        text             >= 0.11 && < 1.3,
                        cassava          >= 0.4  && < 0.5,
                        zlib             >= 0.5  && < 0.7,
