Move Value into its own file

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -29,6 +29,7 @@ Library
     exposed-modules:   Language.Hakaru.Syntax.IClasses,
                        Language.Hakaru.Syntax.ABT,
                        Language.Hakaru.Syntax.Variable,
+                       Language.Hakaru.Syntax.Value,
                        Language.Hakaru.Syntax.Datum,
                        Language.Hakaru.Syntax.DatumCase,
                        Language.Hakaru.Types.DataKind,
