--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -164,6 +164,7 @@ Executable hakaru
     build-depends:     base             >= 4.7  && < 5.0, 
                        mwc-random       >= 0.13 && < 0.14,
                        text             >= 0.11 && < 1.3,
+                       pretty           >= 1.1  && < 1.2,
                        hakaru           >= 0.3
 
 ----------------------------------------------------------------
@@ -176,6 +177,7 @@ Executable simplify
     build-depends:     base             >= 4.7  && < 5.0, 
                        mwc-random       >= 0.13 && < 0.14,
                        text             >= 0.11 && < 1.3,
+                       pretty           >= 1.1  && < 1.2,
                        hakaru           >= 0.3
 
 Executable disintegrate
@@ -187,6 +189,7 @@ Executable disintegrate
     build-depends:     base             >= 4.7  && < 5.0, 
                        mwc-random       >= 0.13 && < 0.14,
                        text             >= 0.11 && < 1.3,
+                       pretty           >= 1.1  && < 1.2,
                        hakaru           >= 0.3
 
 
