Adding dev list for travis notifications

--- a/.travis.yml
+++ b/.travis.yml
@@ -132,3 +132,9 @@ script:
         (cd dist && cabal install --force-reinstalls "$SRC_TGZ")
       ;;
   esac
+
+notifications:
+  email:
+    - hakaru-dev-l@list.indiana.edu
+  on_success: change
+  on_failure: always
