--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -58,7 +58,7 @@ Library
                        Language.Hakaru.Pretty.Haskell,
                        Language.Hakaru.Pretty.Concrete,
                        Language.Hakaru.Pretty.Maple,
-                       -- Language.Hakaru.Runtime.Prelude,
+                       Language.Hakaru.Runtime.Prelude,
                        Language.Hakaru.Expect,
                        Language.Hakaru.Observe,
                        Language.Hakaru.Simplify,
