Adding normalize command

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -45,6 +45,7 @@ Library
                        Language.Hakaru.Types.HClasses,
                        Language.Hakaru.Types.Coercion,
                        Language.Hakaru.Syntax.AST,
+                       Language.Hakaru.Syntax.AST.Transforms,
                        Language.Hakaru.Syntax.AST.Sing,
                        Language.Hakaru.Syntax.AST.Eq,
                        Language.Hakaru.Syntax.AST.AlphaEq,
@@ -195,7 +196,6 @@ Executable disintegrate
                        pretty           >= 1.1  && < 1.2,
                        hakaru           >= 0.3
 
-
 ----------------------------------------------------------------
 Executable pretty
     Main-is:           Pretty.hs
@@ -209,6 +209,19 @@ Executable pretty
                        pretty           >= 1.1  && < 1.2,
                        hakaru           >= 0.3
 
+----------------------------------------------------------------
+Executable normalize
+    Main-is:           Normalize.hs
+    Hs-Source-Dirs:    commands
+    Default-Language:  Haskell2010
+    GHC-Options:       -O2 -Wall -fwarn-tabs
+
+    build-depends:     base             >= 4.7  && < 5.0, 
+                       mwc-random       >= 0.13 && < 0.14,
+                       text             >= 0.11 && < 1.3,
+                       mtl              >= 2.1,
+                       pretty           >= 1.1  && < 1.2,
+                       hakaru           >= 0.3
 
 ----------------------------------------------------------------
 ----------------------------------------------------------- fin.
