Retry stack install

--- a/.travis.yml
+++ b/.travis.yml
@@ -106,7 +106,7 @@ install:
 - |
   case "$BUILD" in
     stack)
-      stack --no-terminal --install-ghc $ARGS test --only-dependencies
+      travis_retry stack --no-terminal --install-ghc $ARGS test --only-dependencies
       ;;
     cabal)
       cabal --version
