Initial version of the partial-evaluator based Expect.hs

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -66,6 +66,7 @@ Library
                        Language.Hakaru.Sample,
                        Language.Hakaru.Evaluation.Types,
                        Language.Hakaru.Evaluation.Lazy,
+                       Language.Hakaru.Evaluation.EvalMonad
                        Language.Hakaru.Evaluation.ConstantPropagation,
                        Language.Hakaru.Evaluation.DisintegrationMonad,
                        Language.Hakaru.Disintegrate,
