Improve quick-and-dirty call graph

--- a/maple/Makefile
+++ b/maple/Makefile
@@ -6,5 +6,8 @@ ppaml.mla: update-archive.mpl NewSLO.mpl
 test: ppaml.mla NewSLOTests.mpl PlateT.mpl DisintT.mpl
 	for f in $(filter %.mpl,$^); do maple -q "$$f" | grep -v " passed$$"; done 2>&1 | tee $@
 
-call-graph.svg: call-graph NewSLO.mpl
-	./$^ | dot -Tsvg > $@
+call-graph.svg: call-graph.dot
+	dot -Tsvg $< > $@
+
+call-graph.dot: call-graph NewSLO.mpl
+	./$^ > $@
