More reorganizing of Maple code
Split modules into separate files
https://github.com/hakaru-dev/hakaru/commit/027ca53fd1d4f4d00780d78fca52948fec26508a#commitcomment-16966109

--- a/maple/Makefile
+++ b/maple/Makefile
@@ -1,6 +1,6 @@
 all: ppaml.mla test call-graph.svg
 
-ppaml.mla: update-archive.mpl NewSLO.mpl
+ppaml.mla: update-archive.mpl BindingTools.mpl Hakaru.mpl KB.mpl NewSLO.mpl
 	maple -q $<
 
 test: ppaml.mla NewSLOTests.mpl PlateT.mpl DisintT.mpl
