--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ language: c
 # Caching so the next build will be fast too.
 cache:
   directories:
-  - $HOME/.ghc
-  - $HOME/.cabal
+#  - $HOME/.ghc
+#  - $HOME/.cabal
   - $HOME/.stack
 
 # The different configurations we want to test. We have BUILD=cabal which uses
