Improve call graph

--- a/maple/Makefile
+++ b/maple/Makefile
@@ -1,4 +1,4 @@
-all: ppaml.mla test call-graph.svg
+all: ppaml.mla test call-graph.pdf
 
 ppaml.mla: update-archive.mpl BindingTools.mpl Hakaru.mpl KB.mpl Loop.mpl NewSLO.mpl
 	maple -q $<
@@ -8,6 +8,9 @@ test: ppaml.mla NewSLOTests.mpl PlateT.mpl DisintT.mpl
 
 call-graph.svg: call-graph.dot
 	dot -Tsvg $< > $@
+
+call-graph.pdf: call-graph.dot
+	dot -Tpdf $< > $@
 
 call-graph.dot: call-graph NewSLO.mpl
 	./$^ > $@
