--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -112,6 +112,7 @@ Test-Suite system-testsuite
                        indentation      >= 0.2.1,
                        transformers     >= 0.3  && < 0.6,
                        containers       >= 0.5  && < 0.6,
+                       semigroups       >= 0.16, 
                        logfloat         >= 0.13 && < 0.14,
                        parsec           >= 3.1  && < 3.2,
                        primitive        >= 0.5  && < 0.7,
