Separate Maple test output into multiple files that "make" can produce in parallel

--- a/maple/Makefile
+++ b/maple/Makefile
@@ -1,10 +1,12 @@
-all: ppaml.mla test call-graph.pdf
+.SUFFIXES: .out .mpl
+
+all: ppaml.mla NewSLOTests.out PlateT.out DisintT.out call-graph.pdf
 
 ppaml.mla: update-archive.mpl BindingTools.mpl Hakaru.mpl KB.mpl Loop.mpl NewSLO.mpl
 	maple -q $<
 
-test: ppaml.mla NewSLOTests.mpl PlateT.mpl DisintT.mpl
-	parallel -j 3 maple -q -- $(filter %.mpl,$^) 2>&1 | tee $@ | grep -v " passed$$"
+.mpl.out: ppaml.mla
+	maple -q $< 2>&1 | tee $@ | grep -v " passed$$"
 
 call-graph.svg: call-graph.dot
 	dot -Tsvg $< > $@
