--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -208,6 +208,7 @@ Executable hkc
     build-depends:     base             >= 4.7  && < 5.0, 
                        -- mwc-random       >= 0.13 && < 0.14,
                        text             >= 0.11 && < 1.3,
+                       raw-strings-qq   >= 1.0,
                        -- mtl              >= 2.1,
                        -- pretty           >= 1.1  && < 1.2,
                        hakaru           >= 0.3
