Add Hakaru favicon

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: Hakaru
 repo_url: https://github.com/hakaru-dev/hakaru
+site_favicon: favicon.ico
 site_author: Hakaru Team
 extra_javascript:
     - 'https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML'
