Keep adding to documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,10 +15,10 @@ pages:
   - 'Random Primitives':   'lang/rand.md'
   - 'Let and Bind':        'index.md'
   - 'Conditionals':        'index.md'
-  - 'Coercions':           'about.md'
-  - 'Functions and Let':   'about.md'
-  - 'Datatypes and match': 'about.md'
-  - 'Arrays':              'about.md'
+  - 'Coercions':           'index.md'
+  - 'Functions and Let':   'index.md'
+  - 'Datatypes and match': 'index.md'
+  - 'Arrays':              'index.md'
 - Transformations:
   - 'Expect':       'index.md'
   - 'Disintegrate': 'index.md'
@@ -29,7 +29,7 @@ pages:
   - 'Datums':                    'index.md'
   - 'Coercions':                 'index.md'
   - 'Transformaitons':           'index.md'
-  - 'Testing':                   'about.md'
-  - 'Adding a Language Feautre': 'about.md'
+  - 'Testing':                   'index.md'
+  - 'Adding a Language Feautre': 'index.md'
 - Examples: 'examples.md'
 theme: yeti
