Continue fleshing out documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,23 +13,23 @@ pages:
   - 'Quick Example': 'intro/quickstart.md'
 - Language Guide:
   - 'Random Primitives':   'lang/rand.md'
-  - 'Let and Bind':        'index.md'
-  - 'Conditionals':        'index.md'
-  - 'Coercions':           'index.md'
-  - 'Functions and Let':   'index.md'
-  - 'Datatypes and match': 'index.md'
-  - 'Arrays':              'index.md'
+  - 'Let and Bind':        'lang/letbind.md'
+  - 'Conditionals':        'lang/cond.md'
+  - 'Coercions':           'lang/coercions.md'
+  - 'Functions and Let':   'lang/functions.md'
+  - 'Datatypes and match': 'lang/datatypes.md'
+  - 'Arrays':              'lang/arrays.md'
 - Transformations:
-  - 'Expect':       'index.md'
-  - 'Disintegrate': 'index.md'
-  - 'Simplify':     'index.md'
+  - 'Expect':       'transforms/expect.md'
+  - 'Disintegrate': 'transforms/disintegrate.md'
+  - 'Simplify':     'transforms/simplify.md'
 - Internals:
-  - 'AST and Hakaru Datakind':   'index.md'
-  - 'ABT':                       'index.md'
-  - 'Datums':                    'index.md'
-  - 'Coercions':                 'index.md'
-  - 'Transformaitons':           'index.md'
-  - 'Testing':                   'index.md'
-  - 'Adding a Language Feautre': 'index.md'
+  - 'AST and Hakaru Datakind':   'internals/ast.md'
+  - 'ABT':                       'internals/abt.md'
+  - 'Datums':                    'internals/datums.md'
+  - 'Coercions':                 'internals/coercions.md'
+  - 'Transformaitons':           'internals/transforms.md'
+  - 'Testing':                   'internals/testing.md'
+  - 'Adding a Language Feautre': 'internals/newfeature.md'
 - Examples: 'examples.md'
 theme: yeti
