--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -150,11 +150,12 @@ Executable simplify
     Default-Language:  Haskell2010
     GHC-Options:       -O2 -Wall -fwarn-tabs
 
-    build-depends:     base             >= 4.7  && < 5.0, 
-                       mwc-random       >= 0.13 && < 0.14,
-                       text             >= 0.11 && < 1.3,
-                       pretty           >= 1.1  && < 1.2,
-                       hakaru           >= 0.3
+    build-depends:     base                 >= 4.7  && < 5.0, 
+                       mwc-random           >= 0.13 && < 0.14,
+                       text                 >= 0.11 && < 1.3,
+                       pretty               >= 1.1  && < 1.2,
+                       optparse-applicative >= 0.12 && < 0.13,
+                       hakaru               >= 0.3
 
 ----------------------------------------------------------------
 Executable disintegrate
