--- a/stack.yaml
+++ b/stack.yaml
@@ -7,10 +7,7 @@ packages:
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps:
- - indentation-0.2.1.2
+ - indentation-core-0.0
+ - indentation-parsec-0.0
  - pretty-1.1.3.2
  - logfloat-0.13.3.3
-
-flags:
-  indentation:
-    trifecta: false
