--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -78,29 +78,28 @@ Library
 
     other-modules:     System.MapleSSH
 
-    build-depends:     base             >= 4.7  && < 5.0, 
-                       Cabal            >= 1.16,
-                       ghc-prim         >= 0.3  && < 0.6,
-                       transformers     >= 0.3  && < 0.6,
-                       containers       >= 0.5  && < 0.6, 
-                       semigroups       >= 0.16, 
-                       pretty           >= 1.1  && < 1.2,
-                       logfloat         >= 0.13 && < 0.14,
-                       math-functions   >= 0.1  && < 0.2,
-                       vector           >= 0.10,
-                       indentation-parsec
-                                        >= 0.0,
-                       ansi-terminal    >= 0.6,
-                       text             >= 0.11 && < 1.3,
-                       parsec           >= 3.1  && < 3.2,
-                       mwc-random       >= 0.13 && < 0.14,
-                       directory        >= 1.2  && < 1.3,
-                       integration      >= 0.2.0 && < 0.3.0,
-                       primitive        >= 0.5  && < 0.7,
-                       process          >= 1.1  && < 2.0,
-                       HUnit            >= 1.2  && < 2.0,
-                       mtl              >= 2.1,
-                       filepath         >= 1.1.0.2
+    build-depends:     base               >= 4.7  && < 5.0, 
+                       Cabal              >= 1.16,
+                       ghc-prim           >= 0.3  && < 0.6,
+                       transformers       >= 0.3  && < 0.6,
+                       containers         >= 0.5  && < 0.6, 
+                       semigroups         >= 0.16, 
+                       pretty             >= 1.1  && < 1.2,
+                       logfloat           >= 0.13 && < 0.14,
+                       math-functions     >= 0.1  && < 0.2,
+                       vector             >= 0.10,
+                       indentation-parsec >= 0.0,
+                       ansi-terminal      >= 0.6,
+                       text               >= 0.11 && < 1.3,
+                       parsec             >= 3.1  && < 3.2,
+                       mwc-random         >= 0.13 && < 0.14,
+                       directory          >= 1.2  && < 1.3,
+                       integration        >= 0.2.0 && < 0.3.0,
+                       primitive          >= 0.5  && < 0.7,
+                       process            >= 1.1  && < 2.0,
+                       HUnit              >= 1.2  && < 2.0,
+                       mtl                >= 2.1,
+                       filepath           >= 1.1.0.2
 
 ----------------------------------------------------------------
 Test-Suite system-testsuite
@@ -110,28 +109,27 @@ Test-Suite system-testsuite
     Default-Language:  Haskell2010
     GHC-Options:       -Wall -fwarn-tabs
 
-    Build-Depends:     base             >= 4.6  && < 5.0, 
-                       Cabal            >= 1.16, 
-                       ghc-prim         >= 0.3  && < 0.6,
-                       indentation-parsec
-                                        >= 0.0,
-                       transformers     >= 0.3  && < 0.6,
-                       containers       >= 0.5  && < 0.6,
-                       semigroups       >= 0.16, 
-                       logfloat         >= 0.13 && < 0.14,
-                       parsec           >= 3.1  && < 3.2,
-                       primitive        >= 0.5  && < 0.7,
-                       pretty           >= 1.1  && < 1.2,
-                       mwc-random       >= 0.13 && < 0.14,
-                       math-functions   >= 0.1  && < 0.2,
-                       integration      >= 0.2  && < 0.3,
-                       ansi-terminal    >= 0.6,
-                       HUnit            >= 1.2  && < 2.0,
-                       QuickCheck       >= 2.6,
-                       process          >= 1.1  && < 2.0,
-                       mtl              >= 2.1,
-                       vector           >= 0.10,
-                       text             >= 0.11 && < 1.3
+    Build-Depends:     base               >= 4.6  && < 5.0, 
+                       Cabal              >= 1.16, 
+                       ghc-prim           >= 0.3  && < 0.6,
+                       indentation-parsec >= 0.0,
+                       transformers       >= 0.3  && < 0.6,
+                       containers         >= 0.5  && < 0.6,
+                       semigroups         >= 0.16, 
+                       logfloat           >= 0.13 && < 0.14,
+                       parsec             >= 3.1  && < 3.2,
+                       primitive          >= 0.5  && < 0.7,
+                       pretty             >= 1.1  && < 1.2,
+                       mwc-random         >= 0.13 && < 0.14,
+                       math-functions     >= 0.1  && < 0.2,
+                       integration        >= 0.2  && < 0.3,
+                       ansi-terminal      >= 0.6,
+                       HUnit              >= 1.2  && < 2.0,
+                       QuickCheck         >= 2.6,
+                       process            >= 1.1  && < 2.0,
+                       mtl                >= 2.1,
+                       vector             >= 0.10,
+                       text               >= 0.11 && < 1.3
 
 ----------------------------------------------------------------
 Executable hakaru
