--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -145,6 +145,20 @@ Executable hakaru
                        hakaru           >= 0.3
 
 ----------------------------------------------------------------
+Executable compile
+    Main-is:           Compile.hs
+    Hs-Source-Dirs:    commands
+    Default-Language:  Haskell2010
+    GHC-Options:       -O2 -Wall -fwarn-tabs
+
+    build-depends:     base             >= 4.7  && < 5.0, 
+                       mwc-random       >= 0.13 && < 0.14,
+                       text             >= 0.11 && < 1.3,
+                       pretty           >= 1.1  && < 1.2,
+                       filepath         >= 1.3,
+                       hakaru           >= 0.3
+
+----------------------------------------------------------------
 Executable simplify
     Main-is:           Simplify.hs
     Hs-Source-Dirs:    commands
