--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -216,16 +216,13 @@ Executable normalize
 ----------------------------------------------------------------
 Executable hkc
     Main-is:           HKC.hs
-    Hs-Source-Dirs:    commands
+    Hs-Source-Dirs:    commands/hkc
     Default-Language:  Haskell2010
     GHC-Options:       -O2 -Wall -fwarn-tabs
 
-    build-depends:     base             >= 4.7  && < 5.0, 
-                       -- mwc-random       >= 0.13 && < 0.14,
+    build-depends:     base             >= 4.7  && < 5.0,
                        text             >= 0.11 && < 1.3,
                        raw-strings-qq   >= 1.0,
-                       -- mtl              >= 2.1,
-                       -- pretty           >= 1.1  && < 1.2,
                        hakaru           >= 0.3
 
 
