--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -78,12 +78,12 @@ Library
 
     other-modules:     System.MapleSSH
 
-    build-depends:     base               >= 4.7  && < 5.0, 
+    build-depends:     base               >= 4.7  && < 5.0,
                        Cabal              >= 1.16,
                        ghc-prim           >= 0.3  && < 0.6,
                        transformers       >= 0.3  && < 0.6,
-                       containers         >= 0.5  && < 0.6, 
-                       semigroups         >= 0.16, 
+                       containers         >= 0.5  && < 0.6,
+                       semigroups         >= 0.16,
                        pretty             >= 1.1  && < 1.2,
                        logfloat           >= 0.13 && < 0.14,
                        math-functions     >= 0.1  && < 0.2,
@@ -109,13 +109,13 @@ Test-Suite system-testsuite
     Default-Language:  Haskell2010
     GHC-Options:       -Wall -fwarn-tabs
 
-    Build-Depends:     base               >= 4.6  && < 5.0, 
-                       Cabal              >= 1.16, 
+    Build-Depends:     base               >= 4.6  && < 5.0,
+                       Cabal              >= 1.16,
                        ghc-prim           >= 0.3  && < 0.6,
                        indentation-parsec >= 0.0,
                        transformers       >= 0.3  && < 0.6,
                        containers         >= 0.5  && < 0.6,
-                       semigroups         >= 0.16, 
+                       semigroups         >= 0.16,
                        logfloat           >= 0.13 && < 0.14,
                        parsec             >= 3.1  && < 3.2,
                        primitive          >= 0.5  && < 0.7,
@@ -138,7 +138,7 @@ Executable hakaru
     Default-Language:  Haskell2010
     GHC-Options:       -O2 -Wall -fwarn-tabs
 
-    build-depends:     base             >= 4.7  && < 5.0, 
+    build-depends:     base             >= 4.7  && < 5.0,
                        mwc-random       >= 0.13 && < 0.14,
                        text             >= 0.11 && < 1.3,
                        pretty           >= 1.1  && < 1.2,
@@ -151,7 +151,7 @@ Executable compile
     Default-Language:  Haskell2010
     GHC-Options:       -O2 -Wall -fwarn-tabs
 
-    build-depends:     base             >= 4.7  && < 5.0, 
+    build-depends:     base             >= 4.7  && < 5.0,
                        mwc-random       >= 0.13 && < 0.14,
                        text             >= 0.11 && < 1.3,
                        pretty           >= 1.1  && < 1.2,
@@ -165,7 +165,7 @@ Executable simplify
     Default-Language:  Haskell2010
     GHC-Options:       -O2 -Wall -fwarn-tabs
 
-    build-depends:     base                 >= 4.7  && < 5.0, 
+    build-depends:     base                 >= 4.7  && < 5.0,
                        mwc-random           >= 0.13 && < 0.14,
                        text                 >= 0.11 && < 1.3,
                        pretty               >= 1.1  && < 1.2,
@@ -179,7 +179,7 @@ Executable disintegrate
     Default-Language:  Haskell2010
     GHC-Options:       -O2 -Wall -fwarn-tabs
 
-    build-depends:     base             >= 4.7  && < 5.0, 
+    build-depends:     base             >= 4.7  && < 5.0,
                        mwc-random       >= 0.13 && < 0.14,
                        text             >= 0.11 && < 1.3,
                        pretty           >= 1.1  && < 1.2,
@@ -192,7 +192,7 @@ Executable pretty
     Default-Language:  Haskell2010
     GHC-Options:       -O2 -Wall -fwarn-tabs
 
-    build-depends:     base             >= 4.7  && < 5.0, 
+    build-depends:     base             >= 4.7  && < 5.0,
                        mwc-random       >= 0.13 && < 0.14,
                        text             >= 0.11 && < 1.3,
                        pretty           >= 1.1  && < 1.2,
@@ -205,7 +205,7 @@ Executable normalize
     Default-Language:  Haskell2010
     GHC-Options:       -O2 -Wall -fwarn-tabs
 
-    build-depends:     base             >= 4.7  && < 5.0, 
+    build-depends:     base             >= 4.7  && < 5.0,
                        mwc-random       >= 0.13 && < 0.14,
                        text             >= 0.11 && < 1.3,
                        mtl              >= 2.1,
@@ -222,8 +222,8 @@ Executable hkc
 
     build-depends:     base             >= 4.7  && < 5.0,
                        text             >= 0.11 && < 1.3,
-                       raw-strings-qq   >= 1.0,
                        language-c       >= 0.0,
+                       pretty           >= 1.1  && < 1.2,
                        hakaru           >= 0.3
 
 
@@ -234,7 +234,7 @@ Executable mh
     Default-Language:  Haskell2010
     GHC-Options:       -O2 -Wall -fwarn-tabs
 
-    build-depends:     base             >= 4.7  && < 5.0, 
+    build-depends:     base             >= 4.7  && < 5.0,
                        mwc-random       >= 0.13 && < 0.14,
                        text             >= 0.11 && < 1.3,
                        mtl              >= 2.1,
