--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -223,6 +223,7 @@ Executable hkc
     build-depends:     base             >= 4.7  && < 5.0,
                        text             >= 0.11 && < 1.3,
                        language-c       >= 0.0,
+                       mtl              >= 2.1,
                        pretty           >= 1.1  && < 1.2,
                        hakaru           >= 0.3
 
