using NonEmpty list of CStat for prog

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -225,7 +225,8 @@ Executable hkc
                        language-c       >= 0.0,
                        mtl              >= 2.1,
                        pretty           >= 1.1  && < 1.2,
-                       hakaru           >= 0.3
+                       hakaru           >= 0.3,
+                       semigroups       >= 0.18
 
 
 ----------------------------------------------------------------
