--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -221,10 +221,12 @@ Executable hkc
     GHC-Options:       -O2 -Wall -fwarn-tabs
 
     build-depends:     base             >= 4.7  && < 5.0,
+                       containers       >= 0.5  && < 0.6,
                        text             >= 0.11 && < 1.3,
                        language-c       >= 0.0,
                        mtl              >= 2.1,
                        pretty           >= 1.1  && < 1.2,
+                       pretty-show      >= 1.6,
                        hakaru           >= 0.3,
                        semigroups       >= 0.18
 
